added RequestActivity, RequestFragment, and RegisteredUser classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.uco.tlawyer.whereyouat">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-feature android:name="android.hardware.location.gps"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,10 +24,13 @@
         </activity>
         <activity android:name=".RegisterUserActivity" />
         <activity android:name=".LoginSuccessActivity" />
-        <activity android:name=".ContactsActivity"></activity>
+        <activity android:name=".ContactsActivity" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC2PLeCaZB2blU3eaWWXlVwGQs4-b_0nwQ"/>
+            android:value="AIzaSyC2PLeCaZB2blU3eaWWXlVwGQs4-b_0nwQ" />
+
+        <activity android:name=".RequestActivity"></activity>
     </application>
 
 </manifest>
