--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-feature android:name="android.hardware.location.gps"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,18 +26,21 @@
         </activity>
         <activity android:name=".RegisterUserActivity" />
         <activity android:name=".LoginSuccessActivity" />
-        <activity android:name=".ContactsActivity"/>
-        <activity android:name=".RequestActivity"></activity>
-        <service
-            android:name=".FirebaseTokenID">
+        <activity android:name=".ContactsActivity" />
+        <activity android:name=".RequestActivity" />
+
+        <service android:name=".FirebaseTokenID">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBvNlk3W-30QSKgqrRwKnAXhfGF-0O9UxQ" />
+
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".PasswordResetActivity"></activity>
     </application>
 
 </manifest>
