--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,12 @@
             android:value="AIzaSyBvNlk3W-30QSKgqrRwKnAXhfGF-0O9UxQ" />
 
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".PasswordResetActivity"></activity>
+        <activity android:name=".PasswordResetActivity" />
+        <activity android:name=".NewContactActivity" />
+        <service
+            android:name=".TrackerService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
